plugins {
    id 'com.android.application'
    // Kotlin 插件
    id 'org.jetbrains.kotlin.android' version '2.1.10'
    // 作为 Xposed 模块使用务必添加，其它情况可选
    id 'com.google.devtools.ksp' version '2.1.10-1.0.31'
}

android {
    def version = project.getProperties().get("version")
    if (version == null || "unspecified".equalsIgnoreCase(version)) {
        version = "V1.5.4"
    }
    def gitCommitHash = getGitInfo("rev-parse --short HEAD", "unknown")
    def gitBranchName = getGitInfo("rev-parse --abbrev-ref HEAD", "unknown")
    def gitCommitCount = { ->
        try {
            return "git rev-list --count HEAD".execute().text.trim().toInteger()
        } catch (Exception ignored) {
            return 1
        }
    }()
    def buildTime = new Date().format("yyyy-MM-dd HH:mm:ss", TimeZone.getTimeZone("Asia/Shanghai"))

    compileSdk 35
    namespace 'io.github.lazyimmortal.sesame'
    defaultConfig {
        applicationId "io.github.lazyimmortal.sesame"
        minSdk 21
        //noinspection OldTargetApi
        targetSdk 34
        versionCode gitCommitCount
        versionName version

        buildConfigField "String", "GIT_COMMIT_HASH", "\"${gitCommitHash}\""
        buildConfigField "String", "GIT_BRANCH_NAME", "\"${gitBranchName}\""
        buildConfigField "String", "BUILD_TIME", "\"${buildTime}\""
    }
    compileOptions {
        // 如果未指定，则默认使用 Android Gradle 插件选择的版本（例如 Java 8 或更高版本）
        // https://developer.android.com/build/jdks?hl=zh-cn
        targetCompatibility JavaVersion.VERSION_21
        sourceCompatibility JavaVersion.VERSION_21
    }
    kotlinOptions {
        jvmTarget = "21"
    }
    buildFeatures {
        buildConfig = true // 显式启用 BuildConfig
    }
    ext {
        applicationName = "Cactus"
        applicationType = "Normal"
    }
    flavorDimensions.add("default")
    productFlavors {
        normal {
            dimension "default"
            ext.applicationType = "Normal"
        }
        compatible {
            dimension "default"
            ext.applicationType = "Compatible"
            ndk {
                abiFilters "armeabi-v7a"  // 仅包含 32 位架构
            }
        }
    }
    signingConfigs {
        release {
            storeFile file('cwj-1.keystore')
            storePassword 'Zh87887278'
            keyAlias 'Zh'
            keyPassword 'Zh87887278'
        }
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
        debug {
            signingConfig signingConfigs.release
        }
    }
    applicationVariants.configureEach { variant ->
        variant.outputs.configureEach { output ->
            def outputFile = output.outputFile
            if (outputFile != null && outputFile.name.endsWith('.apk')) {
                if (variant.buildType.name == 'release') {
                    output.outputFileName = "${applicationName}-${variant.productFlavors[0].ext.applicationType}-${defaultConfig.versionName}-${gitCommitHash}.apk"
                }
            }
        }
    }
    androidResources.additionalParameters += ['--allow-reserved-package-id', '--package-id', '0x55']
    sourceSets {
        main {
            jniLibs.srcDirs = ['src/main/jniLibs']
        }
    }
}

dependencies {
    // Kotlin 标准库
    implementation "org.jetbrains.kotlin:kotlin-stdlib:2.1.10"
    //noinspection GradleCompatible
    implementation 'com.android.support:appcompat-v7:28.0.0'
    // 基础依赖
    implementation 'com.highcapable.yukihookapi:api:1.2.1'
    // 作为 Xposed 模块使用务必添加，其它情况可选
    compileOnly 'de.robv.android.xposed:api:82'
    // 作为 Xposed 模块使用务必添加，其它情况可选
    ksp 'com.highcapable.yukihookapi:ksp-xposed:1.2.1'
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
    implementation 'com.elvishew:xlog:1.11.0'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'io.noties.markwon:core:4.6.2'
    implementation 'com.zjiecode:wxpusher-java-sdk:2.1.4'

    normalImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.18.2'
    normalImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.2'
    normalImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.18.2'

    compatibleImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.5'
    compatibleImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.5'
    compatibleImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.5'

}

static def getGitInfo(String args, String fallback) {
    try {
        return "git ${args}".execute().text.trim()
    } catch (Exception ignored) {
        return fallback
    }
}
